<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pomodoro Timer</string>

    <string name="timer_view_string">00:00</string>

    <string name="phase_pomodoro">Pomodoro Timer</string>
    <string name="phase_rest">Pomodoro Rest Timer</string>

    <string name="completed_pomodoro">Pomodoro Timer Completed</string>
    <string name="completed_rest">Rest Timer Completed</string>

    <string name="start_button">Start</string>
    <string name="start_rest_button">Rest</string>
    <string name="start_pomodoro_button">Pomodoro</string>
    <string name="stop_button">Stop</string>
    <string name="restart_button">Restart</string>
    <string name="countdown_button_down">Count down</string>
    <string name="countdown_button_up">Count up</string>

    <string name="action_settings">Settings</string>

</resources>
