<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:text="@string/app_name"
        android:textSize="@dimen/app_name_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin" />

    <TextView
        android:id="@+id/timer_view"
        android:text="@string/timer_view_string"
        android:textSize="@dimen/timer_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/layout_margin">

        <Button
            android:id="@+id/start_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/start_button"
            android:layout_marginRight="@dimen/layout_margin"/>

        <Button
            android:id="@+id/stop_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/stop_button"/>
    </LinearLayout>

    <Button
        android:id="@+id/restart_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/restart_button" />

    <Button
        android:id="@+id/countdown_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countdown_button_down" />

</LinearLayout>
